--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
+    "css-hot-loader": "^1.4.4",
     "css-loader": "^2.1.1",
-    "fibers": "^4.0.1",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "sass": "^1.20.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -36,6 +38,8 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4"
+    "@babel/polyfill": "^7.4.4",
+    "autoprefixer": "^9.5.1",
+    "postcss-cli": "^6.1.2"
   }
 }
