--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "autoprefixer": "^9.5.1",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "postcss-cli": "^6.1.2"
   }
 }
