--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --hot --open --inline --content-base ./dist"
+        "start": "webpack-dev-server --hot --open --inline --content-base ./dist",
+        "build": "webpack --mode production"
     },
     "repository": {
         "type": "git",
