--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "webpack-dev-server --hot --open --inline --content-base ./dist",
+        "start": "webpack-dev-server --hot --open --inline --content-base ./src",
         "build": "webpack --mode production"
     },
     "repository": {
@@ -21,7 +21,9 @@
     "homepage": "https://github.com/altear/altear.github.io#readme",
     "devDependencies": {
         "babel-loader": "^8.0.6",
+        "css-hot-loader": "^1.4.4",
         "css-loader": "^2.1.1",
+        "file-loader": "^4.0.0",
         "less-loader": "^5.0.0",
         "mini-css-extract-plugin": "^0.7.0",
         "style-loader": "^0.23.1",
